@@ -17,6 +17,21 @@
 #define _SOCKDEV_H_
 
 /*-------------------------------------------------------------------*/
+/* The sockdev callback function is an optional callback function    */
+/* that the sockdev connection handler calls after the connection    */
+/* has been established but before it has logged the connection to   */
+/* the console. The boolean return code from the callback indicates  */
+/* true or false (!0 or 0) whether the connection should be accepted */
+/* or not. If the return from the callback is 0 (false), the socket  */
+/* is immediately closed and the "connection not accepted" message   */
+/* is logged to the console. You should NOT perform any significant  */
+/* processing in your callback. If you need to do any significant    */
+/* processing you should instead create a worker to perform it in.   */
+/*-------------------------------------------------------------------*/
+
+typedef int ONCONNECT( void* );     // onconnect callback function (opt)
+
+/*-------------------------------------------------------------------*/
 /* Bind structure for "Socket Devices"                               */
 /*-------------------------------------------------------------------*/
 
@@ -27,13 +42,21 @@ struct bind_struct          // Bind structure for "Socket Devices"
     DEVBLK  *dev;           // ptr to corresponding device block
     char    *spec;          // socket_spec for listening socket
     int      sd;            // listening socket to use in select
-                            // NOTE: Following two fields malloc'ed.
-    char    *clientname;    // connected client's hostname   or NULL
-    char    *clientip;      // connected client's IP address or NULL
+
+                            // NOTE: Following 2 fields malloc'ed.
+    char    *clientname;    // connected client's hostname
+    char    *clientip;      // conencted client's ip address
+
+    ONCONNECT   *fn;        // ptr to onconnect callback func (opt)
+    void        *arg;       // argument for callback function (opt)
 };
 
 /* "Socket Device" functions */
-extern int bind_device   (DEVBLK* dev, char* spec);
-extern int unbind_device (DEVBLK* dev);
+
+extern int bind_device_ex   (DEVBLK* dev, char* spec, ONCONNECT* fn, void* arg );
+extern int unbind_device_ex (DEVBLK* dev, int forced);
+
+inline int bind_device      (DEVBLK* dev, char* spec) { return bind_device_ex   ( dev, spec, NULL, NULL ); }
+inline int unbind_device    (DEVBLK* dev)             { return unbind_device_ex ( dev, 0 );                }
 
 #endif // _SOCKDEV_H_
